# edu-agent

./: README.md  config.yml  main.py  pyproject.toml
data/: students.json
prompts/context/: formula_solution.jinja  historical_period.jinja
prompts/templates/: tutor_full_answer.jinja  tutor_quick_answer.jinja
prompts/tones/: formal.jinja  friendly.jinja
src/edu_agent/: agent.py  api.py  chat_model.py  config.py  context.py  dependencies.py  prompts.py  state.py  student.py  utils.py
src/edu_agent/middleware/: detect_tools.py  filter_profanity.py  load_student.py  select_tools.py  system_instructions.py
src/edu_agent/tools/: formula.py  historical_period.py  load_tools.py
templates/: demo.html
