[project]
name = "edu-agent"
version = "0.1.0"
description = "Simple project for educational AI Agent"
readme = "README.md"
requires-python = ">=3.12,<=3.13"
dependencies = [
    "fastapi[standard]==0.135.3",
    "jinja2==3.1.6",
    "langchain==1.2.15",
    "langchain-ollama==1.1.0",
    "langchain-openai==1.1.12",
    "langgraph==1.1.6",
    "loguru==0.7.3",
    "pydantic==2.12.5",
    "python-dotenv==1.2.2",
    "pyyaml==6.0.3",
    "safetext==0.3.3",
    "sympy==1.14.0",
    "uvicorn==0.44.0",
]

[build-system]
requires = ["uv_build>=0.11.3,<0.12"]
build-backend = "uv_build"
